add api to .env, pr fixes